EPBDS-16494 Replace session-scoped local history API